--- a/code-examples/Methods/Methods.csproj
+++ b/code-examples/Methods/Methods.csproj
@@ -42,7 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConversionOperators.cs" />
     <Compile Include="Ctors.cs" />
+    <Compile Include="OperatorOverload.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
