Played with recursion

--- a/patterns/Behavioral/Memento/Memento.csproj
+++ b/patterns/Behavioral/Memento/Memento.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caretaker.cs" />
+    <Compile Include="GameMemento.cs" />
+    <Compile Include="GameOriginator.cs" />
+    <Compile Include="GameState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
