--- a/code-examples/Methods/Methods.csproj
+++ b/code-examples/Methods/Methods.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalcMethods.cs" />
     <Compile Include="ConversionOperators.cs" />
     <Compile Include="Ctors.cs" />
     <Compile Include="OperatorOverload.cs" />
